--- a/day-4/contact_tracker/public/index.html
+++ b/day-4/contact_tracker/public/index.html
@@ -20,6 +20,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!--<script src="https://www.gstatic.com/firebasejs/4.1.0/firebase.js"></script>
+      <script>
+        // Initialize Firebase
+        var config = {
+          apiKey: "AIzaSyC6IG7y_KrJDlv6WAz26AWkJaNNNfbEVTE",
+          authDomain: "contract-tracker.firebaseapp.com",
+          databaseURL: "https://contract-tracker.firebaseio.com",
+          projectId: "contract-tracker",
+          storageBucket: "contract-tracker.appspot.com",
+          messagingSenderId: "43978944557"
+        };
+        firebase.initializeApp(config);
+      </script>-->
   </head>
   <body>
     <noscript>
